<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="medialibrary_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="techsupport_text">Написать в поддержку</string>
    <string name="license_text">Пользовательское соглашение</string>
    <string name="search_hint">Поиcк</string>
    <string name="refresh_text">Обновить</string>
    <string name="license_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_developer">Zimik24@yandex.ru</string>
    <string name="empty_track_list_error">Ничего не нашлось</string>
    <string name="bad_internet_connection_error">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="your_history_text">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="Country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="fragment_list_playlist_gag">Вы не создали ни одного плейлиста</string>
    <string name="fragment_favorite_gag">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_track">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="new_playlist_alert_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_alert_cancel">Отмена</string>
    <string name="new_playlist_alert_confirm">Завершить</string>
    <string name="new_playlist_created">Плейлист %s создан</string>
    <string name="add_track_to_playlist">Добавлено в плейлист  %s</string>
    <string name="error_add_track_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_count_in_playlist">%s %s</string>
    <string name="delete_track_alert">Хотите удалить трек?</string>
    <string name="delete_track_confirm_alert">Да</string>
    <string name="delete_track_cancel_alert">Нет</string>
    <string name="empty_track_confirm_alert">ОК</string>
    <string name="empty_track_message_alert">В этом плейлисте нет списка треков,\n которым можно поделиться</string>
    <string name="empty_playlist_message_alert">В плейлист "%s" еще не добавлены треки</string>
    <string name="empty_string"> </string>
    <string name="bottom_sheet_menu_share">Поделиться</string>
    <string name="bottom_sheet_menu_edit">Редактировать информацию</string>
    <string name="bottom_sheet_menu_delete">Удалить плейлист</string>
    <string name="delete_playlist">Хотите удалить плейлист "%s"?</string>
    <string name="save_playlist">Сохранить</string>
    <string name="share_playlist_name">Плейлист: %s</string>
    <string name="share_playlist_description">\nОписание: %s</string>
    <string name="share_playlist_tracks">\n%d. %s - %s (%s)</string>
    <plurals name="tracks_plurals">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="duration_plurals">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>


</resources>