<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainLayoutVertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin">

        <TextView
            style="@style/HeaderTextViewStyle"
            android:text="@string/settings_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_24dp"
        android:paddingHorizontal="@dimen/button_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_21dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/SettingsTextViewWithSwitchStyle"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/dark_theme_text" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDayNight"
                style="@style/SettingsSwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnShare"
            style="@style/SettingsTextViewStyle"
            android:text="@string/share_text"
            app:drawableEndCompat="@drawable/shareapp_icon" />

        <TextView
            android:id="@+id/btnSupport"
            style="@style/SettingsTextViewStyle"
            android:text="@string/techsupport_text"
            app:drawableEndCompat="@drawable/techsupport_icon" />

        <TextView
            android:id="@+id/btnLicense"
            style="@style/SettingsTextViewStyle"
            android:text="@string/license_text"
            app:drawableEndCompat="@drawable/arrowright_icon" />

    </LinearLayout>
</LinearLayout>
