<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_margin"
        android:layout_marginTop="@dimen/header_margin"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <TextView
        android:id="@+id/headerText"
        style="@style/HeaderTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/containerCoverPlaylist"
        android:layout_width="@dimen/empty_dp"
        android:layout_height="@dimen/empty_dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginVertical="@dimen/margin_32dp"
        android:background="@drawable/new_playlist_placeholder"

        app:cardCornerRadius="@dimen/margin_8dp"
        app:cardElevation="@dimen/empty_dp"

        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerText">

        <ImageView
            android:id="@+id/coverPlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:src="@drawable/new_playlist_placeholder"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxtName"
        style="@style/TextInputLayoutStyle"
        android:theme="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:hint="@string/playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerCoverPlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxtDescription"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/empty_dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_17dp"
        android:theme="@style/TextInputLayoutStyle"
        android:hint="@string/playlist_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxtName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreatePlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="17dp"
        android:layout_marginVertical="32dp"
        android:background="@drawable/is_enabled"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/playlist_create"
        android:textAllCaps="false"
        android:textColor="@color/YP_White"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>